--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,20 +9,25 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginTop="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp">
+        android:layout_marginLeft="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="120dp"
             android:fontFamily="@font/ubuntu_medium"
             android:padding="10dp"
-            android:text="HopeLife"
+            android:text="@string/app_name"
+            android:textAlignment="center"
             android:textColor="@color/main"
             android:textSize="64sp" />
 
@@ -30,38 +35,33 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="56dp"
             android:background="#7AE8E7E7"
-            android:fontFamily="@font/open_sans_bold"
-            android:hint="email"
+            android:fontFamily="@font/open_sans"
+            android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:padding="10dp" />
 
         <com.google.android.material.textfield.TextInputEditText
-            android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="password"
-            android:inputType="textPassword"
+            android:layout_marginTop="24dp"
             android:background="#7AE8E7E7"
-            android:padding="10dp"/>
+            android:hint="@string/password"
+            android:inputType="textPassword"
+            android:padding="10dp" />
 
         <Button
-            android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="36dp"
             android:background="@drawable/button"
+            android:fontFamily="@font/ubuntu"
+            android:text="@string/sign_in"
             android:textColor="@color/light"
-            android:text="Войти" />
-
-        <TextView
-            android:layout_marginTop="16dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:textSize="16sp" />
 
 
     </LinearLayout>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
