--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,6 +4,9 @@
         <item>@font/open_sans</item>
         <item>@font/open_sans_bold</item>
         <item>@font/oswald</item>
+        <item>@font/ubuntu</item>
+        <item>@font/ubuntu_bold</item>
+        <item>@font/ubuntu_light</item>
         <item>@font/ubuntu_medium</item>
     </array>
 </resources>
