--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,8 +8,9 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/form"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginTop="40dp"
         android:layout_marginStart="32dp"
@@ -32,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:background="#7AE8E7E7"
-            android:fontFamily="@font/open_sans_bold"
+            android:fontFamily="@font/ubuntu_medium"
             android:hint="email"
             android:inputType="textEmailAddress"
             android:padding="10dp" />
@@ -59,9 +60,35 @@
             android:layout_marginTop="16dp"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:text="Забыли пароль ?"
+            android:textColor="@color/main"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginBottom="20dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="100dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Нет аккаунта ?"
+                android:padding="10dp"/>
+            <TextView
+                android:id="@+id/reg"
+                android:padding="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Зарегистрироваться"
+                android:textColor="@color/main"/>
+        </LinearLayout>
 
 
     </LinearLayout>
 
-</LinearLayout>
+
+
+</RelativeLayout>
