--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
             android:layout_marginTop="120dp"
             android:fontFamily="@font/ubuntu_medium"
             android:padding="10dp"
-            android:text="HopeLife"
+            android:text="@string/app_name"
             android:textColor="@color/main"
             android:textSize="64sp" />
 
@@ -36,9 +36,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
-            android:background="#7AE8E7E7"
+            android:background="@drawable/text_input"
             android:fontFamily="@font/ubuntu_medium"
-            android:hint="email"
+            android:hint="@string/email_hint"
             android:inputType="textEmailAddress"
             android:padding="10dp" />
 
@@ -46,9 +46,9 @@
             android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="password"
+            android:hint="@string/password_hint"
             android:inputType="textPassword"
-            android:background="#7AE8E7E7"
+            android:background="@drawable/text_input"
             android:padding="10dp"/>
 
         <Button
@@ -58,14 +58,14 @@
             android:layout_gravity="center"
             android:background="@drawable/button"
             android:textColor="@color/light"
-            android:text="Войти" />
+            android:text="@string/login" />
 
         <TextView
             android:layout_marginTop="16dp"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Забыли пароль ?"
+            android:text="@string/forget_password"
             android:textColor="@color/main"/>
 
         <LinearLayout
@@ -79,14 +79,14 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Нет аккаунта ?"
+                android:text="@string/no_account"
                 android:padding="10dp"/>
             <TextView
                 android:id="@+id/reg"
                 android:padding="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Зарегистрироваться"
+                android:text="@string/register"
                 android:textColor="@color/main"/>
         </LinearLayout>
 
