--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Регистрация"
+            android:text="@string/reg_title"
             android:textColor="@color/main"
             android:textSize="48sp" />
 
@@ -33,7 +33,8 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -46,7 +47,8 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -76,9 +78,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@drawable/button"
-            android:text="@string/register"
+            android:text="@string/reg_step1"
             android:textSize="12sp"
-            android:textColor="@color/light"/>
+            android:textColor="@color/light"
+            android:id="@+id/next"/>
 
         <LinearLayout
             android:paddingTop="10dp"
@@ -92,7 +95,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                android:text="@string/have_account" />
+                android:text="@string/have_account"/>
 
             <TextView
                 android:layout_width="wrap_content"
